--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "dayjs": "^1.11.7",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "microcms-js-sdk": "^2.3.2",
