--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -16,7 +16,8 @@
     "microcms-js-sdk": "^2.3.2",
     "next": "13.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-pico-8": "^4.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
