--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "13.1.2",
+    "@vercel/analytics": "^1.5.0",
     "dayjs": "^1.11.7",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
